--- a/requirements.txt
+++ b/requirements.txt
@@ -83,7 +83,7 @@ openpyxl==3.1.5
 oscrypto==1.3.0
 packaging==24.2
 pandas==2.2.3
-pandasai==1.5.15
+pandasai==3.0.0b17
 parso==0.8.4
 pathos==0.3.4
 patsy==1.0.1
